Add formatting with flexbox

--- a/index.html
+++ b/index.html
@@ -7,34 +7,23 @@
         <title> Stick The Landing</title>
     </head>
     <body>
-        <div class="section1">
+            <div class="topsection">
             <div class="header">Header Logo</div>
             <div class="menu">
                 <a href="google.com">header link one</a>
                 <a href="google.com">header link two</a>
                 <a href="google.com">header link three</a>
-            </div>
-
+            </div></div>
+            
+            
+            <div class="textbox1">
             <div class="subsection1">This website is awesome</div>
             <div class="subsection2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
             <div class="subsectionbutton">
                 <button class="first">Sign Up</button>
-            </div>
-            <div class="sub-placeholder">this is a placeholder for an image</div>
-        </div>
-
-        <div class="section2">
-            <div class="header2">Some random information.</div>
-            <div class="cards">
-                <ul>
-                    <li>this is some subtext under an illustration or image</li>
-                    <li>this is some subtext under an illustration or image</li>
-                    <li>this is some subtext under an illustration or image</li>
-                    <li>this is some subtext under an illustration or image</li>
-                </ul>
-
-            </div>
-        </div>
+            </div></div>
+            <div class="placeholder">this is a placeholder for an image</div>
+  
     </body>
 
 </html>
