--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="google.com">header link three</a>
             </div></div>
             
-            
+            <div class="wrapper">
             <div class="textbox1">
             <div class="subsection1">This website is awesome</div>
             <div class="subsection2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
@@ -23,6 +23,7 @@
                 <button class="first">Sign Up</button>
             </div></div>
             <div class="placeholder">this is a placeholder for an image</div>
+            </div>
   
     </body>
 
