--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title> Stick The Landing</title>
     </head>
     <body>
+<!-- header + first section of page -->
+
             <div class="topsection">
             <div class="header">Header Logo</div>
             <div class="menu">
@@ -25,6 +27,23 @@
             <div class="placeholder">this is a placeholder for an image</div>
             </div>
   
+<!-- begin second section -->
+
+<p><div class="textheader">Some random information.</div></p>
+
+<div class="wrapper2">
+<div class="block"></div>
+<div class="block"></div>
+<div class="block"></div>
+<div class="block"></div>
+</div>
+
+<div class="wrapper3">
+    <div class="blocktext">this is some subtext under an illustration or image</div>
+    <div class="blocktext">this is some subtext under an illustration or image</div>
+    <div class="blocktext">this is some subtext under an illustration or image</div>
+    <div class="blocktext">this is some subtext under an illustration or image</div>
+</div>
     </body>
 
 </html>
