Format second section w/Grid

--- a/index.html
+++ b/index.html
@@ -31,19 +31,21 @@
 
 <p><div class="textheader">Some random information.</div></p>
 
-<div class="wrapper2">
-<div class="block"></div>
-<div class="block"></div>
-<div class="block"></div>
-<div class="block"></div>
-</div>
+<div class="bigwrap">
+<div class="griddy">
 
-<div class="wrapper3">
-    <div class="blocktext">this is some subtext under an illustration or image</div>
-    <div class="blocktext">this is some subtext under an illustration or image</div>
-    <div class="blocktext">this is some subtext under an illustration or image</div>
-    <div class="blocktext">this is some subtext under an illustration or image</div>
-</div>
+<div class="block"></div>
+<div class="block"></div>
+<div class="block"></div>
+<div class="block"></div>
+
+
+<div class="blocktext">this is some subtext under an illustration or image</div>
+<div class="blocktext">this is some subtext under an illustration or image</div>
+<div class="blocktext">this is some subtext under an illustration or image</div>
+<div class="blocktext">this is some subtext under an illustration or image</div>
+</div></div>
+
     </body>
 
 </html>
