--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 <div class="blocktext">this is some subtext under an illustration or image</div>
 </div></div>
 
+
+<!-- begin third section -->
+
+<div class="wrappy">
+<div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+<div class="author">-Thor, God of Thunder</div>
+</div>
+
     </body>
 
 </html>
