--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
 <div class="author">-Thor, God of Thunder</div>
 </div>
 
+
+<!-- call to action-->
+
+<div class="cally">
+    <div class="wrapt">
+<div class="topcall">Call to action! It's time!</div>
+<div class="blurb">Sign up for our product by clicking that button right over there!</div>
+</div>
+<button class="second">Sign Up</button>
+</div>
+
+
     </body>
 
 </html>
