Add footer w/formatting. Test page completed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="style.css">
         <title> Stick The Landing</title>
     </head>
-    <body>
+    <body class="site">
+
 <!-- header + first section of page -->
 
             <div class="topsection">
@@ -55,7 +56,7 @@
 </div>
 
 
-<!-- call to action-->
+<!-- call to action -->
 
 <div class="cally">
     <div class="wrapt">
@@ -65,6 +66,9 @@
 <button class="second">Sign Up</button>
 </div>
 
+<!-- footer -->
+
+<footer class="bottom">Copyright © The Odin Project 2021 </footer>
 
     </body>
 
